--- a/css/blocks/common/section-title.scss
+++ b/css/blocks/common/section-title.scss
@@ -10,7 +10,7 @@
     font-size: rem(76px);
   }
   @include phones() {
-    font-size: rem(70px);
+    font-size: rem(68px);
   }
 
   &_black {
@@ -34,8 +34,31 @@
     margin-bottom: rem(40px);
 
     @include phones() {
-      font-size: rem(62px);
+      font-size: rem(58px);
       margin-bottom: rem(30px);
+    }
+  }
+  &_menu {
+    position: absolute;
+    top: rem(95px);
+    left: rem(95px);
+
+    @include tablets {
+      top: rem(110px);
+      left: rem(30px);
+      margin-bottom: 0;
+    }
+    @include phones {
+      font-size: rem(56px);
+      margin-bottom: 0;
+      top: rem(60px);
+      left: rem(10px);
+    }
+  }
+  &_order {
+    @include phones() {
+      font-size: rem(50px);
+      margin-bottom: rem(20px);
     }
   }
 }
