--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -16,6 +16,7 @@
   margin-left: rem(15px);
 
   @include tablets() {
+    margin-top: rem(70px);
     flex-direction: column;
     flex: initial;
   }
