--- a/css/blocks/menu.scss
+++ b/css/blocks/menu.scss
@@ -14,6 +14,15 @@
   &__item {
     display: flex;
     height: 100%;
+    cursor: pointer;
+  }
+  &__item_active {
+    @include phones {
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: 10;
+    }
   }
   &__title {
     position: relative;
@@ -27,12 +36,6 @@
     background-repeat: no-repeat;
     background-size: cover;
 
-    @include tablets {
-      font-size: rem(30px);
-    }
-    @include phones {
-      font-size: rem(33px);
-    }
     &::before {
       content: "";
       position: absolute;
@@ -45,6 +48,7 @@
     }
       @include phones {
         padding: 0.7% 0.5%;
+        font-size: rem(24px);
       }
   }
   &__title_meat {
@@ -58,9 +62,6 @@
   }
   &__item_active &__title {
     color: $yellow;
-  }
-  &__item_active &__description {
-    width: rem(540px);
   }
   &__title-txt {
     position: absolute;
@@ -77,6 +78,16 @@
     background-color: $grey;
     opacity: .92;
   }
+  &__item_active &__description {
+    width: rem(540px);
+
+    @include tablets {
+      width: 100%;
+    }
+    @include phones {
+      width: 100%;
+    }
+  }
   &__description-txt {
     @include ubuntu($style: light);
     width: 100%;
@@ -86,29 +97,45 @@
     line-height: rem(24px);
     padding: rem(60px) rem(35px);
 
-    @include tablets {
-      font-size: rem(16px);
-    }
     @include phones {
-      padding: 5% 3.5%;
+      padding: 20% 10%;
     }
   }
 }
 
-.section-title_menu {
+// close btn
+.menu-accordeon__description-close {
   position: absolute;
-  top: rem(95px);
-  left: rem(95px);
+  right: 10px;
+  top: 15px;
+  width: 32px;
+  height: 32px;
+  opacity: 0.5;
+  text-decoration: none;
+  outline: none;
+  background-color: transparent;
+  border: none;
+  display: none;
 
-  @include tablets {
-    top: rem(110px);
-    left: rem(30px);
-    margin-bottom: 0;
+  @include phones() {
+    display: block;
   }
-  @include phones {
-    font-size: rem(62px);
-    margin-bottom: 0;
-    top: rem(60px);
-    left: rem(10px);
-  }
+}
+.menu-accordeon__description-close:hover {
+  opacity: 1;
+}
+.menu-accordeon__description-close:before, .menu-accordeon__description-close:after {
+  position: absolute;
+  left: 15px;
+  content: '';
+  height: 20px;
+  width: 4px;
+  background-color: #ffffff;
+  border-radius: 25%;
+}
+.menu-accordeon__description-close:before {
+  transform: rotate(45deg);
+}
+.menu-accordeon__description-close:after {
+  transform: rotate(-45deg);
 }
