--- a/css/blocks/order.scss
+++ b/css/blocks/order.scss
@@ -47,9 +47,6 @@
       @include tablets() {
         margin-bottom: rem(20px);
       }
-      // @include phones() {
-      //   margin-bottom: rem(40px);
-      // } не работает
     }
   }
   &__block {
@@ -86,6 +83,10 @@
   padding: rem(9px) rem(10px);
   margin-top: 5px;
 
+  @include phones() {
+    padding: rem(6px) rem(10px);
+  }
+
   &:focus {
     width: 100%;
     border: rem(2px) solid $yellow;
@@ -95,12 +96,20 @@
 
 .form__block-input_comment {
   height: rem(120px);
+
+  @include phones() {
+    height: rem(100px);
+  }
 }
 
 .form-controlls {
   display: flex;
   align-items: center;
   margin-bottom: rem(30px);
+
+  @include phones() {
+    margin-bottom: rem(20px);
+  }
 
   &:last-child {
     margin-bottom: rem(20px);
@@ -184,12 +193,6 @@
 .form__confirm {
   display: flex;
   align-items: center;
-}
-
-.section-title_order {
-  @include phones() {
-    font-size: rem(62px);
-  }
 }
 
 .form-cntrls {
