--- a/docs/css/blocks/header.scss
+++ b/docs/css/blocks/header.scss
@@ -2,12 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: rem(7px);
-}
-
-.header__logo-icon {
-  width: rem(92px);
-  height: rem(70px);
+  margin-top: 7px;
 }
 
 .header__buttons {
@@ -15,27 +10,12 @@
   align-items: center;
 }
 
-.header__menu {
-  @include tablets() {
-    display: none;
-  }
-  @include phones() {
-    display: none;
-  }
-}
-
-.header__links {
-  display: flex;
-  align-items: center;
-  margin-left: rem(15px);
-}
-
-.nav__list {
+.menu__list {
   display: flex;
   align-items: center;
 }
 
-.nav__item {
+.menu__item {
   @include ubuntu($style: medium);
 
   display: flex;
@@ -50,17 +30,17 @@
   }
   &:after {
     content: '';
-    width: rem(6px);
-    height: rem(6px);
+    width: 6px;
+    height: 6px;
     border-radius: 50%;
-    margin: 0 rem(14.5px);
+    margin: 0 14.5px;
     display: inline-block;
     background: #fff;
   }
 }
 
-.nav__link {
+.menu__link {
   color: #fff;
   text-decoration: none;
-  font-size: rem(13px);
+  font-size: 13px;
 }
