--- a/docs/css/blocks/hero.scss
+++ b/docs/css/blocks/hero.scss
@@ -3,91 +3,50 @@
   background-size: cover;
   display: flex;
   flex-direction: column;
+}
 
-  &__container {
-    justify-content: flex-start;
-  }
+.hero__container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.hero__order-btn {
+  margin-left: 15px;
 }
 
 .hero__content {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex: 0.73;
-  margin-left: rem(15px);
-
-  @include tablets() {
-    flex-direction: column;
-    flex: initial;
-  }
-  @include phones() {
-    flex-direction: column;
-    flex: initial;
-  }
+  margin-left: 15px;
 }
 
 .hero__content-text {
   @include lifehack()
 
   color: #fff;
-  font-size: rem(64px);
-  line-height: rem(60px);
-
-  @include phones() {
-    font-size: rem(58px);
-  }
+  font-size: 64px;
+  line-height: 60px;
 }
 
 .hero__content-description {
-  margin-left: rem(12px);
-  margin-top: rem(65px);
-  display: flex;
-  flex-flow: column nowrap;
-
-  @include tablets() {
-    margin-top: 0;
-    margin-left: 0;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-  @include phones() {
-    margin-top: rem(25px);
-    margin-left: 0;
-  }
-}
-
-.hero__content-image, .hero__content-description {
-  width: 50%;
-
-  @include phones() {
-    width: 80%;
-  }
-}
-
-.hero__burger-img {
-  display: inline-block;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  max-width: 100%;
-  max-height: 100%;
+  margin-left: 12px;
+  margin-top: 65px;
 }
 
 .arrow-down {
-  width: rem(30px);
-  height: rem(15px);
+  width: 35px;
+  height: 25px;
   position: absolute;
-  bottom: rem(38px);
-  left: 48.45%;
+  bottom: 35px;
+  left: 48%;
 }
 
 .arrow-down__link {
+  background: url('../images/icons/arrow-scroll.svg') center center no-repeat;
   display: block;
   width: 100%;
   height: 100%;
-}
-
-.arrow-down__icon {
-  width: inherit;
-  height: inherit;
 }
